# Mili-rust

./: .gitignore  ARCHITECTURE_REVIEW.md  Cargo.toml  README.md  VANILLA_IMPLEMENTATION_PLAN.md  run.bat  发布说明.md  启动服务器.bat  启动说明.md  构建.bat
.github/workflows/: ci.yml
benches/: idle.rs  many_players.rs  packet.rs
crates/java_string/src/: char.rs  slice.rs
crates/valence_advancement/src/: lib.rs
crates/valence_anvil/src/: lib.rs
crates/valence_entity/extracted/: entities.json  misc.json
crates/valence_entity/src/: attributes.rs  query.rs
crates/valence_equipment/src/: lib.rs
crates/valence_generated/extracted/: entities.json  items.json  packets.json
crates/valence_network/: Cargo.toml
crates/valence_vanilla/: Cargo.toml
crates/valence_vanilla/src/: block_update.rs  combat.rs  crafting.rs  crop.rs  entity_ai.rs  hopper.rs  lib.rs  mob_spawning.rs  physics.rs  redstone.rs  terrain.rs  tick_schedule.rs  villager.rs
crates/valence_vanilla/src/entity_ai/: behavior.rs  memory.rs  mod.rs  pathfinding.rs  perception.rs
crates/valence_vanilla/src/redstone/: comparator.rs  lamp.rs  mod.rs  piston.rs  repeater.rs  signal.rs  torch.rs  wire.rs
crates/valence_world/: Cargo.toml
crates/valence_world/src/: level_dat.rs  lib.rs  save_system.rs
examples/: ctf.rs  vanilla_demo.rs
extractor/: gradle.properties
src/: callbacks.rs  config.rs  main.rs  testing.rs
src/tests/: example.rs  layer.rs
temp_jar/extract_rs/: Cargo.toml
tools/: update_blocks.py  update_entities.py  update_items.py  verify_update.py
tools/packet_inspector/: build.rs
(+56 files in other folders)
